# ptp_c

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: ptp_control.h  ptp_message.h
src/: ptp_control.c  ptp_message.c  ptp_message_test.cpp  util.c  util.h
